--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Welcome to StoppedSmokingSince.com
 
-This website is not up yet lol.
+This is a creation that is in the works... More information on it as it becomes more readily accessible and operational.
+
+For more information please contact sebastian AT airizel DOT net . 
